Cleaner and better fix for mod card alignment issues.

--- a/style/stylesheets/betterttv-dark.css
+++ b/style/stylesheets/betterttv-dark.css
@@ -837,7 +837,6 @@ a.g18_gear-00000080, a.g18_close-00000080, a.g18_popout-00000080, a.g18_trash-00
 .button-simple.light {
 	color: #FFF;
 	background: rgb(60,60,60);
-	vertical-align: baseline;
 }
 .button-simple.dark{
 	background: rgb(60,60,60);
@@ -851,5 +850,4 @@ button img {
     -o-filter: invert(90%);
     -ms-filter: invert(90%);
     -moz-filter: invert(90%);
-    vertical-align: baseline;
 }
